kubernetes/bank-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-service
  namespace: banka-2-dev
  labels:
    service: bank-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: bank-service
  template:
    metadata:
      labels:
        service: bank-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-2/bank-service:latest
          imagePullPolicy: Always
          name: bank-service
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 2
              memory: 2Gi

---
apiVersion: v1
kind: Service
metadata:
  name: bank-service
  namespace: banka-2-dev
spec:
  selector:
    service: bank-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
