kubernetes/iam-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-service
  namespace: banka-2-dev
  labels:
    service: iam-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: iam-service
  template:
    metadata:
      labels:
        service: iam-service
    spec:
      containers:
        - image: harbor.k8s.elab.rs/banka-2/iam-service:latest
          imagePullPolicy: Always
          name: iam-service
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 2
              memory: 2Gi

---
apiVersion: v1
kind: Service
metadata:
  name: iam-service
  namespace: banka-2-dev
spec:
  selector:
    service: iam-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
